challenges/pro-dev/k8s/api-only/ingress.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: votes-app
  labels:
    name: votes-app
---
kind: Service
apiVersion: v1
metadata:
  name: upvote-app
  namespace: votes-app
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 3000
    targetPort: 3000
    protocol: TCP
  selector:
    app: upvote-app
    role: frontend
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: votes-app-ingress
  namespace: votes-app
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: votes-api
            port:
              number: 3333
        path: /votes
        pathType: Exact
      - backend:
          service:
            name: votes-api
            port:
              number: 3333
        path: /vote
        pathType: Exact
